<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            style="@style/styleOfFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/Product_name" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/under_line_of_Edit_text"
            android:hint="Product"
            android:id="@+id/Product_name"
            android:inputType="textCapWords"
            android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/styleOfFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/Quantity" />

        <EditText
            android:id="@+id/Quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:backgroundTint="@color/under_line_of_Edit_text"
            android:hint="Quantity"
            android:inputType="numberDecimal"
            android:textSize="20dp" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            android:layout_marginRight="10dp"
            android:id="@+id/spinner_quantity"
          />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            style="@style/styleOfFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/Price" />

        <EditText
            android:id="@+id/Price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:backgroundTint="@color/under_line_of_Edit_text"
            android:hint="Price"
            android:inputType="numberDecimal"
            android:textSize="20dp"
            tools:ignore="RtlHardcoded"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Per"
            style="@style/styleOfFont"

            android:paddingLeft="20dp"/>
        <Spinner
            android:id="@+id/spinner_price"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            style="@style/styleOfFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/Supplier" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/Supplier"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/under_line_of_Edit_text"
            android:hint="Supplier"
            android:inputType="textCapWords"
            android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <TextView
            style="@style/styleOfFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:text="@string/Take_Photo" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_camera_alt_black_24dp"
            android:layout_marginLeft="60dp"
            android:id="@+id/Take_Phot_button"
            android:layout_marginRight="10dp"
            />
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="95dp"
            android:layout_marginLeft="25dp"
            android:background="#B6B6B6"
            android:gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/imgv_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_tag_faces_black_24dp"
             />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <TextView
            style="@style/styleOfFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Barcode" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/ic_camera_black_24dp"
            android:id="@+id/barcode_button"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/Show_theBarcode"
                tools:text="@string/Barcode"
                />
        </LinearLayout>

    </LinearLayout>





</LinearLayout>